@@ -19,6 +19,7 @@
 * build: by default compile with optimizations turned on (RelWithDebInfo instead of Debug) (beevvy)
 * spellchecker: switch default backend from aspell to enchant (aspell is still available) (beevvy)
 * core: #2551 done: use the most online account's status for the tray icon (ultr)
+* core: #2559 fixed: StatusContainer::status() should return actual status instead of desired one (ultr)
 
 +++ version 0.12.0-beta1
 * tabs: "Close all tabs but active one" action added (Juzef)
